# proc-macro-example

./: .gitignore  Cargo.toml
src/: lib.rs
tests/: 01_basic.rs  02_multiple_fields.rs
